[gd_scene load_steps=8 format=3 uid="uid://ba7nlpur8j25q"]

[ext_resource type="Theme" uid="uid://dhta4mqlq1sfc" path="res://Themes/ModSelectionButtonTheme.tres" id="1_i6u5g"]
[ext_resource type="Script" uid="uid://cb3myidgypmku" path="res://Components/MainMenu/Mods/mod_entry.gd" id="2_yw5ql"]
[ext_resource type="Texture2D" uid="uid://cmmabh2f8nonl" path="res://WhiteSearch64.png" id="3_sthmm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2tot7"]

[sub_resource type="LabelSettings" id="LabelSettings_w8jfd"]
font_size = 20
font_color = Color(0.443137, 0.737255, 0.988235, 1)

[sub_resource type="LabelSettings" id="LabelSettings_kphdy"]

[sub_resource type="LabelSettings" id="LabelSettings_x1h87"]
font_size = 20
font_color = Color(0.443137, 0.737255, 0.988235, 1)

[node name="Mod" type="PanelContainer"]
clip_children = 1
offset_right = 521.0
offset_bottom = 97.0
theme = ExtResource("1_i6u5g")
theme_override_styles/panel = SubResource("StyleBoxEmpty_2tot7")
script = ExtResource("2_yw5ql")

[node name="BGButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="ContentMargin" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBox" type="HBoxContainer" parent="ContentMargin"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 15

[node name="Margin" type="MarginContainer" parent="ContentMargin/HBox"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Thumbnail" type="TextureRect" parent="ContentMargin/HBox/Margin"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_sthmm")
expand_mode = 2
stretch_mode = 5

[node name="DetailsVBox" type="VBoxContainer" parent="ContentMargin/HBox"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Title" type="Label" parent="ContentMargin/HBox/DetailsVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "Loading..."
label_settings = SubResource("LabelSettings_w8jfd")
text_direction = 1

[node name="GameVer" type="Label" parent="ContentMargin/HBox/DetailsVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Game version: 1.15.*"
label_settings = SubResource("LabelSettings_kphdy")

[node name="ModVer" type="Label" parent="ContentMargin/HBox/DetailsVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Mod version: 1.0"
label_settings = SubResource("LabelSettings_kphdy")

[node name="Path" type="Label" parent="ContentMargin/HBox/DetailsVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Path: loading..."
label_settings = SubResource("LabelSettings_kphdy")

[node name="TagsList" type="VBoxContainer" parent="ContentMargin/HBox"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Title" type="Label" parent="ContentMargin/HBox/TagsList"]
layout_mode = 2
size_flags_vertical = 1
text = "Tags:"
label_settings = SubResource("LabelSettings_x1h87")
text_direction = 1

[node name="List" type="ScrollContainer" parent="ContentMargin/HBox/TagsList"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="TagsVBox" type="VBoxContainer" parent="ContentMargin/HBox/TagsList/List"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 0
